Fixed White Bar on Mobile

--- a/index.css
+++ b/index.css
@@ -35,6 +35,7 @@ h2  {
    position: fixed;
    width: 100%;
    z-index: 10;
+   align-items: center;
 }
 .nav-list {
    display: flex;
@@ -92,7 +93,7 @@ h2  {
    text-align: center;
    padding: 10rem 2rem;
    background: #4d4e59;
-   width: 100%;
+   /* width: 100%; */
 }
 .projects-section-header {
    max-width: 640px;
@@ -129,7 +130,7 @@ h2  {
    text-align: center;
    width: 100%;
    height: 100vh;
-   padding: 0 2rem;
+   /* padding: 0 0 0 2rem; */
    background: #303841;
 }
 .contact-links {
@@ -173,6 +174,7 @@ figure img {
      justify-content: center;
      width: 100%;
      position: fixed;
+     height: 9rem;
  }
    .contact-links {
        flex-direction: column;
@@ -242,4 +244,5 @@ figure img {
        max-width: 400px;
    }
  }
+ 
  
